--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -31,6 +31,8 @@ main{
 main img{
     width: 400px;
     height: auto;
+    border: 3px solid black;
+    border-radius: 20px;
 }
 
 main button{
@@ -78,6 +80,7 @@ main button:hover{
         width: 250px;
         height: auto;
         margin:10px;
+        
     }
 
     #result{
