add comments on JS and CSS files

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Macondo&display=swap');
 
+/* GENERAL RULES */
 body{
     background-color: rgb(151, 3, 32);
     font-family: 'Macondo', cursive;
